# JobHunterPro

./: main.py  pyproject.toml
.streamlit/: config.toml  requirements.txt
components/: analytics.py  application_history.py  dashboard.py  job_search.py  resume_matching.py
data/: db_utils.py  mock_jobs.py
models/: database.py
utils/: job_boards.py  job_matcher.py  resume_matcher.py
